# ChessEngine

./:  main.cpp  Board.cpp  Board.h  CMakeLists.txt  EnemyPlayer.cpp  EnemyPlayer.h  Move.h  MoveGenerator.cpp  MoveGenerator.h  README.md  main  main.cpp
engine/include/: Board.h  EnemyPlayer.h
engine/src/: Board  Board.cpp  EnemyPlayer.cpp  MoveGenerator.cpp  main  main.cpp
gui/: board_view.py  data.py  engine_api.py  main_gui.py
src/: Board.cpp  EnemyPlayer.cpp  MoveGenerator.cpp  main.cpp
